# polars_readstat_rs

./: .gitignore  ARROW_EXPORT.md  BENCHMARK_RESULTS.md  Cargo.toml  PARALLELIZATION.md  README.md  SCHEMA_INFERENCE.md  TEST_GUIDE.md  TEST_RESULTS.md  claude.md  write_test_for_stata.rs
.cargo/: config.toml
.github/workflows/: publish.yml  publish_test.yml
benches/: readstat_stream_benchmarks.rs  sas_python_stream_benchmarks.rs  sas_read_benchmarks.rs  sas_schema_benchmarks.rs  spss_python_stream_benchmarks.rs  spss_read_benchmarks.rs  spss_schema_benchmarks.rs  stata_python_stream_benchmarks.rs  stata_read_benchmarks.rs  stata_schema_benchmarks.rs
benches/sas/: python_stream_benchmarks.rs  read_benchmarks.rs  schema_benchmarks.rs
benches/spss/: python_stream_benchmarks.rs  read_benchmarks.rs  schema_benchmarks.rs
benches/stata/: python_stream_benchmarks.rs  read_benchmarks.rs  schema_benchmarks.rs
examples/: benchmark.rs  benchmark_rows.rs  debug_strl_refs.rs  dump_rows_json.rs  readstat_dump_parquet.rs  readstat_scan_options.rs  sas_arrow.rs  sas_dump_raw_column.rs  sas_metadata.rs  sas_scan.rs  sas_write_csv.rs  spss_arrow.rs  spss_bench_read.rs  spss_dump_rows_json.rs  spss_metadata.rs  spss_scan.rs  stata_arrow.rs  stata_bench.rs  stata_dump_rows_json.rs  stata_metadata.rs  stata_scan.rs  stata_write.rs  stata_write_bench.rs
src/: lib.rs  readstat_stream.rs  scan_prefetch.rs
src/sas/: arrow_output.rs  buffer.rs  constants.rs  data.rs  encoding.rs  error.rs  header.rs  metadata.rs  mod.rs  page.rs  pipeline.rs  polars_output.rs  reader.rs  types.rs  value.rs  writer.rs
src/spss/: arrow_output.rs  data.rs  error.rs  header.rs  metadata.rs  mod.rs  polars_output.rs  reader.rs  types.rs  writer.rs
src/stata/: arrow_output.rs  compress.rs  data.rs  encoding.rs  error.rs  header.rs  metadata.rs  mod.rs  polars_output.rs  reader.rs  types.rs  value.rs  writer.rs
tests/: .bench_filelist.txt  arrow_stream_tests.rs  informative_nulls.rs  integration_tests.rs  python_compare.rs  readstat_all_files.rs  regression_tests.rs  sas_mix_alignment.rs  sas_writer_csv.rs  spss.rs  spss_smoke_tests.rs  spss_temporal.rs  stata.rs  stata_scan_tests.rs  streaming.rs  test_all_files.rs  test_data.rs  test_header.rs  test_integration.rs  test_metadata.rs  test_parallel_reading.rs
tests/common/: mod.rs
tests/sas/: bench_vs_python.py  compare_metadata_to_python.py  compare_to_python.py  integration_tests.rs  regression_tests.rs  test_all_files.rs  test_data.rs  test_header.rs  test_integration.rs  test_metadata.rs  test_parallel_reading.rs
tests/spss/: bench_vs_python.py  (+7 more)
(+19 files in other folders)
