[package]
name = "polars-readstat-rs"
version = "0.2.0"
edition = "2021"
description = "Pure Rust readers for SAS, Stata, and SPSS with Polars and Arrow outputs"
license = "MIT"
repository = "https://github.com/jrothbaum/polars_readstat_rs"
readme = "README.md"

[dependencies]
polars = { version = "0.51", features = ["lazy", "dtype-datetime", "dtype-date"] }
polars-arrow = { version = "0.51"}
byteorder = "1.5"
thiserror = "1.0"
chrono = "0.4"
rayon = "1.8"
encoding_rs = "0.8"
flate2 = "1.0"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
glob = "0.3"
polars = { version = "0.51", features = ["parquet"] }

[[bench]]
name = "read_benchmarks"
harness = false

[[bench]]
name = "schema_benchmarks"
harness = false

[[bench]]
name = "stata_read_benchmarks"
harness = false

[[bench]]
name = "stata_schema_benchmarks"
harness = false

[[bench]]
name = "spss_read_benchmarks"
harness = false

[[bench]]
name = "spss_schema_benchmarks"
harness = false

[[bench]]
name = "sas_python_stream_benchmarks"
harness = false

[[bench]]
name = "stata_python_stream_benchmarks"
harness = false

[[bench]]
name = "spss_python_stream_benchmarks"
harness = false
